--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
     "@babel/cli": "^7.2.0",
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^7.1.1",
     "babel-jest": "^23.6.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
-    "cross-env": "^5.2.0",
+    "cross-env": "^5.2.1",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-flowtype": "^2.30.0",
@@ -52,6 +53,7 @@
     "eslint-plugin-react": "^6.9.0",
     "jest": "^23.6.0",
     "prettier": "^1.7.4",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.7.1",
+    "yarn": "^1.22.22"
   }
 }
